--- a/make.ipynb
+++ b/make.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 148,
    "id": "073c3abf-ab3d-4657-bf06-ce5777a69ebd",
    "metadata": {},
    "outputs": [
@@ -34,28 +34,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Stephen Macht</td>\n",
-       "      <td>Alexander Parlee: As Long as You Need Me</td>\n",
+       "      <td>Armando Mundaraín</td>\n",
+       "      <td>Terminator: Dark Fate</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Stephen Macht</td>\n",
-       "      <td>Suits</td>\n",
+       "      <td>Armando Mundaraín</td>\n",
+       "      <td>The Spy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Stephen Macht</td>\n",
-       "      <td>Doubt</td>\n",
+       "      <td>Armando Mundaraín</td>\n",
+       "      <td>Ransom</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Stephen Macht</td>\n",
-       "      <td>The Mentalist</td>\n",
+       "      <td>Armando Mundaraín</td>\n",
+       "      <td>Aranyélet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Stephen Macht</td>\n",
-       "      <td>Atlas Shrugged II: The Strike</td>\n",
+       "      <td>Armando Mundaraín</td>\n",
+       "      <td>Tyrant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -63,53 +63,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47298</th>\n",
-       "      <td>Nana Visitor</td>\n",
-       "      <td>Ryan's Hope</td>\n",
+       "      <th>2233</th>\n",
+       "      <td>Arnold Schwarzenegger</td>\n",
+       "      <td>The Streets of San Francisco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47299</th>\n",
-       "      <td>Nana Visitor</td>\n",
-       "      <td>The Sentinel</td>\n",
+       "      <th>2234</th>\n",
+       "      <td>Arnold Schwarzenegger</td>\n",
+       "      <td>Stay Hungry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47300</th>\n",
-       "      <td>Nana Visitor</td>\n",
-       "      <td>Ivan the Terrible</td>\n",
+       "      <th>2235</th>\n",
+       "      <td>Arnold Schwarzenegger</td>\n",
+       "      <td>Happy Anniversary and Goodbye</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47301</th>\n",
-       "      <td>Nana Visitor</td>\n",
-       "      <td>One Life to Live</td>\n",
+       "      <th>2236</th>\n",
+       "      <td>Arnold Schwarzenegger</td>\n",
+       "      <td>The Long Goodbye</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47302</th>\n",
-       "      <td>Nana Visitor</td>\n",
-       "      <td>The Doctors</td>\n",
+       "      <th>2237</th>\n",
+       "      <td>Arnold Schwarzenegger</td>\n",
+       "      <td>Hercules in New York</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>47303 rows × 2 columns</p>\n",
+       "<p>2238 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               actor                          movie_or_TV_name\n",
-       "0      Stephen Macht  Alexander Parlee: As Long as You Need Me\n",
-       "1      Stephen Macht                                     Suits\n",
-       "2      Stephen Macht                                     Doubt\n",
-       "3      Stephen Macht                             The Mentalist\n",
-       "4      Stephen Macht             Atlas Shrugged II: The Strike\n",
-       "...              ...                                       ...\n",
-       "47298   Nana Visitor                               Ryan's Hope\n",
-       "47299   Nana Visitor                              The Sentinel\n",
-       "47300   Nana Visitor                         Ivan the Terrible\n",
-       "47301   Nana Visitor                          One Life to Live\n",
-       "47302   Nana Visitor                               The Doctors\n",
+       "                      actor               movie_or_TV_name\n",
+       "0         Armando Mundaraín          Terminator: Dark Fate\n",
+       "1         Armando Mundaraín                        The Spy\n",
+       "2         Armando Mundaraín                         Ransom\n",
+       "3         Armando Mundaraín                      Aranyélet\n",
+       "4         Armando Mundaraín                         Tyrant\n",
+       "...                     ...                            ...\n",
+       "2233  Arnold Schwarzenegger   The Streets of San Francisco\n",
+       "2234  Arnold Schwarzenegger                    Stay Hungry\n",
+       "2235  Arnold Schwarzenegger  Happy Anniversary and Goodbye\n",
+       "2236  Arnold Schwarzenegger               The Long Goodbye\n",
+       "2237  Arnold Schwarzenegger           Hercules in New York\n",
        "\n",
-       "[47303 rows x 2 columns]"
+       "[2238 rows x 2 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,28 +122,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 149,
    "id": "cea7a8cf-470a-4e3e-b464-17fdc8fc5b50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Star Trek: Deep Space Nine        819\n",
-       "ER                                179\n",
-       "Star Trek: Voyager                152\n",
-       "Star Trek: The Next Generation    151\n",
-       "NYPD Blue                         149\n",
-       "                                 ... \n",
-       "Hollis & Rae                        1\n",
-       "Daltry Calhoun                      1\n",
-       "Hell to Pay                         1\n",
-       "Glass Trap                          1\n",
-       "Ivan the Terrible                   1\n",
-       "Name: movie_or_TV_name, Length: 19670, dtype: int64"
+       "Terminator: Dark Fate    81\n",
+       "Centro médico             9\n",
+       "Amar es para siempre      8\n",
+       "Doctors                   7\n",
+       "The Martian               6\n",
+       "                         ..\n",
+       "Locked Away               1\n",
+       "The Forgotten             1\n",
+       "A Fire in a Dovecot       1\n",
+       "The Event                 1\n",
+       "Hercules in New York      1\n",
+       "Name: movie_or_TV_name, Length: 1926, dtype: int64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 150,
    "id": "aa29cf20-3699-410a-9730-1fb3ed105e20",
    "metadata": {},
    "outputs": [
@@ -187,61 +187,61 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Star Trek: Deep Space Nine</td>\n",
-       "      <td>819</td>\n",
+       "      <td>Terminator: Dark Fate</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ER</td>\n",
-       "      <td>179</td>\n",
+       "      <td>Centro médico</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Star Trek: Voyager</td>\n",
-       "      <td>152</td>\n",
+       "      <td>Amar es para siempre</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Star Trek: The Next Generation</td>\n",
-       "      <td>151</td>\n",
+       "      <td>Doctors</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NYPD Blue</td>\n",
-       "      <td>149</td>\n",
+       "      <td>The Martian</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>L.A. Law</td>\n",
-       "      <td>143</td>\n",
+       "      <td>Hospital Central</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Murder, She Wrote</td>\n",
-       "      <td>133</td>\n",
+       "      <td>Tyrant</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>JAG</td>\n",
-       "      <td>130</td>\n",
+       "      <td>The Alienist</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            movie  number of shared actors\n",
-       "0      Star Trek: Deep Space Nine                      819\n",
-       "1                              ER                      179\n",
-       "2              Star Trek: Voyager                      152\n",
-       "3  Star Trek: The Next Generation                      151\n",
-       "4                       NYPD Blue                      149\n",
-       "5                        L.A. Law                      143\n",
-       "6               Murder, She Wrote                      133\n",
-       "7                             JAG                      130"
+       "                   movie  number of shared actors\n",
+       "0  Terminator: Dark Fate                       81\n",
+       "1          Centro médico                        9\n",
+       "2   Amar es para siempre                        8\n",
+       "3                Doctors                        7\n",
+       "4            The Martian                        6\n",
+       "5       Hospital Central                        6\n",
+       "6                 Tyrant                        5\n",
+       "7           The Alienist                        5"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
