--- a/make.ipynb
+++ b/make.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "id": "073c3abf-ab3d-4657-bf06-ce5777a69ebd",
    "metadata": {},
    "outputs": [
@@ -64,28 +64,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2233</th>\n",
-       "      <td>Arnold Schwarzenegger</td>\n",
-       "      <td>The Streets of San Francisco</td>\n",
+       "      <td>Georgia Simon</td>\n",
+       "      <td>Marilyn Hotchkiss' Ballroom Dancing &amp; Charm Sc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2234</th>\n",
-       "      <td>Arnold Schwarzenegger</td>\n",
-       "      <td>Stay Hungry</td>\n",
+       "      <td>Georgia Simon</td>\n",
+       "      <td>Liv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2235</th>\n",
-       "      <td>Arnold Schwarzenegger</td>\n",
-       "      <td>Happy Anniversary and Goodbye</td>\n",
+       "      <td>Georgia Simon</td>\n",
+       "      <td>Reunion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2236</th>\n",
-       "      <td>Arnold Schwarzenegger</td>\n",
-       "      <td>The Long Goodbye</td>\n",
+       "      <td>Georgia Simon</td>\n",
+       "      <td>Mafia!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2237</th>\n",
-       "      <td>Arnold Schwarzenegger</td>\n",
-       "      <td>Hercules in New York</td>\n",
+       "      <td>Georgia Simon</td>\n",
+       "      <td>Ballistic</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -93,57 +93,57 @@
        "</div>"
       ],
       "text/plain": [
-       "                      actor               movie_or_TV_name\n",
-       "0         Armando Mundaraín          Terminator: Dark Fate\n",
-       "1         Armando Mundaraín                        The Spy\n",
-       "2         Armando Mundaraín                         Ransom\n",
-       "3         Armando Mundaraín                      Aranyélet\n",
-       "4         Armando Mundaraín                         Tyrant\n",
-       "...                     ...                            ...\n",
-       "2233  Arnold Schwarzenegger   The Streets of San Francisco\n",
-       "2234  Arnold Schwarzenegger                    Stay Hungry\n",
-       "2235  Arnold Schwarzenegger  Happy Anniversary and Goodbye\n",
-       "2236  Arnold Schwarzenegger               The Long Goodbye\n",
-       "2237  Arnold Schwarzenegger           Hercules in New York\n",
+       "                  actor                                   movie_or_TV_name\n",
+       "0     Armando Mundaraín                              Terminator: Dark Fate\n",
+       "1     Armando Mundaraín                                            The Spy\n",
+       "2     Armando Mundaraín                                             Ransom\n",
+       "3     Armando Mundaraín                                          Aranyélet\n",
+       "4     Armando Mundaraín                                             Tyrant\n",
+       "...                 ...                                                ...\n",
+       "2233      Georgia Simon  Marilyn Hotchkiss' Ballroom Dancing & Charm Sc...\n",
+       "2234      Georgia Simon                                                Liv\n",
+       "2235      Georgia Simon                                            Reunion\n",
+       "2236      Georgia Simon                                             Mafia!\n",
+       "2237      Georgia Simon                                          Ballistic\n",
        "\n",
        "[2238 rows x 2 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"./results.csv\")\n",
+    "df = pd.read_csv(\"./movies.csv\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "id": "cea7a8cf-470a-4e3e-b464-17fdc8fc5b50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Terminator: Dark Fate    81\n",
-       "Centro médico             9\n",
-       "Amar es para siempre      8\n",
-       "Doctors                   7\n",
-       "The Martian               6\n",
-       "                         ..\n",
-       "Locked Away               1\n",
-       "The Forgotten             1\n",
-       "A Fire in a Dovecot       1\n",
-       "The Event                 1\n",
-       "Hercules in New York      1\n",
+       "Terminator: Dark Fate     81\n",
+       "Centro médico              9\n",
+       "Amar es para siempre       8\n",
+       "Doctors                    7\n",
+       "The Martian                6\n",
+       "                          ..\n",
+       "Hot and Stupid             1\n",
+       "Buried in the Backyard     1\n",
+       "Angie Tribeca              1\n",
+       "Murder Loves Company       1\n",
+       "Ballistic                  1\n",
        "Name: movie_or_TV_name, Length: 1926, dtype: int64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,10 +261,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "282cb4ca5bb2d40817c6f5cfcf004482b40e624cd92104719238e27304971569"
+  },
   "kernelspec": {
    "display_name": "Python [conda env:PIC16B] *",
    "language": "python",
-   "name": "conda-env-PIC16B-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
